class Logger:
    def __init__(self):
        """"""

    def log(self) -> None:
        # Importing Figgle.FiggleFonts...
        # Figgle.figgle_fonts.render()
        print("Logging data...")
